fix(config): update frontend provider from cursor-agent to gemini
- Changed the provider for the frontend agent in project.yaml to enhance compatibility with the current architecture.
- This update ensures better integration with the overall system and aligns with recent changes in agent management.

--- a/config/project.yaml
+++ b/config/project.yaml
@@ -10,7 +10,7 @@ agents:
       Backend engineer. Respond in up to 5 bullet points
   - name: frontend
     role: frontend
-    provider: cursor-agent
+    provider: gemini
     model: auto
     allowed_tools: [Bash, Edit]
     system_prompt: >
