--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -9,3 +9,4 @@ serde_json = "1"
 thiserror = "2"
  time = { version = "0.3", features = ["formatting", "macros"] }
 tempfile = "3"
+config-model = { path = "../config-model" }
