feat(doctor): robust provider detection via version-only probes, shell fallback, relaxed policy; docs/specs and M4 analysis updates
- Doctor: read providers cmd, use version-only probes, shell fallback; raise timeouts to 12s; relax degrade heuristic (OK if version present)
- Config: add example providers/project; provider command mapping doc
- Docs: expand CLI/tmux/workflows, errors/timeouts, config autodetect, DB REPL, tests, risks, broadcast REPL

Closes #34 #35 #36 #37 #38 #39 #40 #31 #32 #33

--- a/config/providers.yaml
+++ b/config/providers.yaml
@@ -1,18 +1,24 @@
 schema_version: 1
 providers:
   claude:
-    cmd: "claude"
+    cmd: "/home/fenikz/.nvm/versions/node/v24.7.0/bin/claude"
+    version_args: ["--version"]
+    help_args: ["--help"]
     oneshot_args: ["-p","--print","--output-format","text","{prompt}","--session-id","{session_id}","--allowed-tools","{allowed_tools}","--permission-mode","plan"]
     repl_args: ["repl"]
     allowlist_flag: "--allowed-tools"
   cursor-agent:
-    cmd: "cursor-agent"
+    cmd: "/home/fenikz/.local/bin/cursor-agent"
+    version_args: ["--version"]
+    help_args: ["--help"]
     oneshot_args: ["-p","--output-format","text","--resume","{chat_id}","{prompt}"]
     repl_args: ["agent","--resume","{chat_id}"]
     create_chat_args: ["create-chat"]
     forbid_flags: ["--force"]
   gemini:
-    cmd: "gemini"
+    cmd: "/home/fenikz/.nvm/versions/node/v24.7.0/bin/gemini"
+    version_args: ["--version"]
+    help_args: ["--help"]
     oneshot_args: ["{prompt}"]
     repl_args: ["-i","{system_prompt}","--allowed-tools","{allowed_tools}"]
     allowlist_flag: "--allowed-tools"
