--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -19,6 +19,7 @@ chrono = { version = "0.4", features = ["serde"] }
 regex = "1.0"
 libc = "0.2"
 uuid = { version = "1.0", features = ["v4"] }
+num_cpus = "1.0"
 
 [dev-dependencies]
 tempfile = "3"
