--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -20,6 +20,8 @@ regex = "1.0"
 libc = "0.2"
 uuid = { version = "1.0", features = ["v4"] }
 num_cpus = "1.0"
+ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
+crossterm = "0.27"
 
 [dev-dependencies]
 tempfile = "3"
